--- a/MerlionPortal/MerlionPortal-war/web/viewsystemlog.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/viewsystemlog.xhtml
@@ -10,7 +10,7 @@
 
     <c:set var="root" value="${request.contextPath}" />
     <ui:composition template="${root}/templates/templateadmin.xhtml">
-        <ui:param name="pageName" value="View Roles" />
+        <ui:param name="pageName" value="View System Log" />
 
         <ui:define name="more-imports">
             <ui:insert>
