--- a/MerlionPortal/MerlionPortal-war/web/tms/viewallrequest.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/viewallrequest.xhtml
@@ -20,7 +20,7 @@
             </ui:insert>
         </ui:define>
 
-       <ui:define name="left">
+        <ui:define name="left">
             <p:menu>
                 <p:submenu label ="Map">
                     <p:submenu label="Node" >
@@ -36,7 +36,7 @@
                     <p:menuitem value="TMS Home" url="tmsindex.xhtml" />
                 </p:submenu>
                 <p:submenu label="Location" >
-                    <p:menuitem value="Add A Location" url="addnewlocation.xhtml" style="background-color: lavender"/>
+                    <p:menuitem value="Add A Location" url="addnewlocation.xhtml"/>
                     <p:menuitem value="View All Locations" url="viewalllocation.xhtml"/>
                 </p:submenu>
                 <p:submenu label="Transportation Asset" >
@@ -74,3 +74,88 @@
 
             </p:menu>
         </ui:define>
+        <ui:define name="right">
+           <h:form id="form">
+                <p:ajaxStatus style="width:16px;height:16px;">
+                    <f:facet name="start">
+                        <h:graphicImage value="/img/load.gif" />
+                    </f:facet>
+                    <f:facet name="complete">
+                        <h:outputText value="" />
+                    </f:facet>
+                </p:ajaxStatus>
+                <p:panel  header="Sent Transportation Service Requests"  style="margin-bottom:20px">
+                    <p:dataTable var="po" value="#{transportationRequestsMB.sentTServicePO}" widgetVar="poTable" rowKey="#{po.servicePOId}"
+                                 emptyMessage="No PO found with given criteria" selectionMode="single" selection="#{transportationRequestsMB.selectedSentTServicePO}"
+                                 filteredValue="#{transportationRequestsMB.filteredTServicePO}" paginator="true"
+                                 paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}" rowsPerPageTemplate="20,50,100">
+
+                        <f:facet name="header">
+                            <p:outputPanel>
+                                <h:outputText value="Search all fields:" />
+                                <p:inputText id="globalFilter" onkeyup="PF('poTable').filter()" style="width:150px" placeholder="Enter keyword"/>
+                            </p:outputPanel>
+                        </f:facet>
+
+                        <p:column filterBy="#{po.servicePOId}" headerText="PO ID" filterMatchMode="contains">
+                            <h:outputText value="#{po.servicePOId}" />
+                        </p:column>
+                        <p:column headerText="Receiver ID" filterBy="#{po.receiverCompanyId}" filterMatchMode="contains">
+                            <h:outputText value="#{po.receiverCompanyId}" />
+                        </p:column>
+                        <p:column filterBy="#{po.createdDate}" headerText="Created Date" filterMatchMode="contains">
+                            <h:outputText value="#{po.createdDate}" />
+                        </p:column>
+
+                        <p:column filterBy="#{transportationRequestsMB.getStatusNumber(po.status)}" headerText="Status" filterMatchMode="in">
+                            <f:facet name="filter">
+                                <p:selectCheckboxMenu label="Status" onchange="PF('poTable').filter()" panelStyle="width:250px" scrollHeight="150">
+                                    <f:selectItems value="#{transportationRequestsMB.status}" />
+                                </p:selectCheckboxMenu>
+                            </f:facet>
+                            <h:outputText value="#{transportationRequestsMB.getStatusNumber(po.status)}" />
+                        </p:column>
+                    </p:dataTable>
+                    <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
+                    <p:commandButton value="View Transportation Service Requests" action="#{transportationRequestsMB.viewSentTransportationServicePO()}" />
+                </p:panel>
+                <p:panel  header="Received Transportation Service Requests"  style="margin-bottom:20px">
+                    <p:dataTable var="poR" value="#{transportationRequestsMB.receivedTServicePO}" widgetVar="poTable2" rowKey="#{poR.servicePOId}"
+                                 emptyMessage="No PO found with given criteria" selectionMode="single" selection="#{transportationRequestsMB.selectedReceivedTServicePO}" 
+                                 filteredValue="#{transportationRequestsMB.filteredTServicePO}" paginator="true"
+                                 paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}" rowsPerPageTemplate="20,50,100">
+
+                        <f:facet name="header">
+                            <p:outputPanel>
+                                <h:outputText value="Search all fields:" />
+                                <p:inputText id="globalFilter" onkeyup="PF('poTable2').filter()" style="width:150px" placeholder="Enter keyword"/>
+                            </p:outputPanel>
+                        </f:facet>
+
+                        <p:column filterBy="#{poR.servicePOId}" headerText="PO ID" filterMatchMode="contains">
+                            <h:outputText value="#{poR.servicePOId}" />
+                        </p:column>
+                        <p:column filterBy="#{poR.senderCompanyId}" headerText="Sender ID" filterMatchMode="contains">
+                            <h:outputText value="#{poR.senderCompanyId}" />
+                        </p:column>
+                        <p:column filterBy="#{poR.createdDate}" headerText="Created Date" filterMatchMode="contains">
+                            <h:outputText value="#{poR.createdDate}" />
+                        </p:column>
+                        <p:column filterBy="#{transportationRequestsMB.getStatusNumber(poR.status)}" headerText="Status" filterMatchMode="in">
+                            <f:facet name="filter">
+                                <p:selectCheckboxMenu label="Status" onchange="PF('poTable2').filter()" panelStyle="width:250px" scrollHeight="150">
+                                    <f:selectItems value="#{transportationRequestsMB.status}" />
+                                </p:selectCheckboxMenu>
+                            </f:facet>
+                            <h:outputText value="#{transportationRequestsMB.getStatusNumber(poR.status)}" />
+                        </p:column>
+                    </p:dataTable>
+                    <p:messages id="msg" showDetail="true" autoUpdate="true" closable="true" />
+                    <p:commandButton value="View Transportation Service Requests" action="#{transportationRequestsMB.viewReceivedTransportationServicePO()}" />
+                </p:panel>
+            </h:form>
+                
+        </ui:define>
+
+    </ui:composition>
+</html>
