--- a/MerlionPortal/MerlionPortal-war/web/tms/tmsindex.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/tmsindex.xhtml
@@ -70,6 +70,9 @@
                     <p:menuitem value="Create A Transportation Request" url="addnewrequest.xhtml" />
                     <p:menuitem value="View All Request" url="viewallrequest.xhtml" />
                 </p:submenu>
+                <p:submenu label="Transportation Service Fulfillment Check" >
+                    <p:menuitem value="Fulfillment Check" url="transportationservicefulfillmentcheck.xhtml" />
+                </p:submenu>
 
             </p:menu>
         </ui:define>
