--- a/MerlionPortal/MerlionPortal-war/web/viewsystemlog.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/viewsystemlog.xhtml
@@ -1,15 +1,16 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 
-    <c:set var="root" value="${request.contextPath}" />
-    <ui:composition template="${root}/templates/templateadmin.xhtml">
+    <c:set var="import" value="templateuser.xhtml" />
+    <c:if test="#{dashboardBean.canUseCI() || dashboardBean.loginedUser.userType == 'superuser'}" >
+        <c:set var="import" value="templateadmin.xhtml" />
+    </c:if>
+    <ui:composition template="templates/${import}">
         <ui:param name="pageName" value="View System Log" />
 
         <ui:define name="more-imports">
@@ -27,11 +28,13 @@
 
                 <h:form id="mainForm">
                     <p:panel id="panel" header="Search Form" style="margin-bottom:10px;">                      
-                        <h:panelGrid columns="5" cellpadding="5">                           
-                            <h:outputLabel value="User Name" />
-                            <p:inputText value="#{systemLogManagedBean.actionerName}"  label="Company Name"/> <p:spacer width="20" height="10" />
-                            <h:outputLabel value="User Id" />
-                            <p:inputText value="#{systemLogManagedBean.actionerId}"  label="Company Name"/> 
+                        <h:panelGrid columns="5" cellpadding="5">   
+                            <c:if test="#{dashboardBean.loginedUser.userType == 'superuser'}" >
+                                <h:outputLabel value="User Name" />
+                                <p:inputText value="#{systemLogManagedBean.actionerName}"  label="Company Name"/> <p:spacer width="20" height="10" />
+                                <h:outputLabel value="User Id" />
+                                <p:inputText value="#{systemLogManagedBean.actionerId}"  label="Company Name"/> 
+                            </c:if>
                             <p:outputLabel  value="Starting date" />
                             <p:calendar  value="#{systemLogManagedBean.startDate}" /><p:spacer width="20" height="10" />
                             <p:outputLabel  value="End date" />
