--- a/MerlionPortal/MerlionPortal-war/web/mrp/materialreq.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/materialreq.xhtml
@@ -201,7 +201,7 @@
                         </p:panel>
                     </p:dataGrid>
                      <p:commandButton value="Go Back"  action="#{materialReqManagedBean.backToMPSResult}" />
-                   
+                   <p:commandButton value="Proceed to Generate PO"  action="#{materialReqManagedBean.proceedToPO}" />
                 </p:panel>
 
 
