--- a/MerlionPortal/MerlionPortal-war/web/tms/addnewtassetschedule.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/addnewtassetschedule.xhtml
@@ -115,6 +115,17 @@
                         </p:row>
                         <p:row>
                             <p:column>
+                                <p:outputLabel for="toperator" value="Operator Id: " />
+                            </p:column>
+                            <p:column>
+                                <p:selectOneMenu id="toperator" value="#{tAssetScheduleManagerBean.operatorId}"  style="width:300px" required="true" requiredMessage="Please select a Transportation Asset">
+                                    <f:selectItem itemLabel="Select Transportation Operator" itemValue="" noSelectionOption="true" />
+                                    <f:selectItems value="#{tAssetScheduleManagerBean.operators}" var="toperator" itemLabel="ID:#{toperator.operatorId} Type:#{toperator.operatorName}"  itemValue="#{toperator.operatorId}"/>
+                                </p:selectOneMenu>
+                            </p:column>
+                        </p:row>
+                        <p:row>
+                            <p:column>
                                 <p:outputLabel for="startDate" value="Start Date " /><p:spacer width="20" height="20" /></p:column>
                             <p:column>
                                 <p:calendar id="startDate" required="true" requiredMessage="Start Date is required" value="#{tAssetScheduleManagerBean.startDate}" pattern="dd-MM-yyyy" mask="true" mindate="#{tAssetScheduleManagerBean.today}" />
