--- a/MerlionPortal/MerlionPortal-war/web/tms/viewalloperatorschedule.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/viewalloperatorschedule.xhtml
@@ -20,7 +20,7 @@
             </ui:insert>
         </ui:define>
 
-       <ui:define name="left">
+        <ui:define name="left">
             <p:menu>
                 <p:submenu label ="Map">
                     <p:submenu label="Node" >
@@ -74,3 +74,88 @@
 
             </p:menu>
         </ui:define>
+        <ui:define name="right">       
+            <h:form id="formMain">
+                <br/>
+                <p:panel id="panel" header=" View Transportation Assets for A Location">
+                    <p:ajaxStatus style="width:16px;height:16px;">
+                        <f:facet name="start">
+                            <h:graphicImage value="/img/load.gif" />
+                        </f:facet>
+                        <f:facet name="complete">
+                            <h:outputText value="" />
+                        </f:facet>
+                    </p:ajaxStatus>
+                        <p:row>
+                            <p:column>
+                                <p:outputLabel for="operator" value="Operator Name: " />
+                            </p:column>
+                            <p:column>
+                                <p:selectOneMenu id="operator" value="#{tOperatorScheduleViewEditManagedBean.operatorId}"  style="width:300px" required="true" requiredMessage="Please select a Operator">
+                                    <p:ajax listener="#{tOperatorScheduleViewEditManagedBean.onOperatorChange()}" update="scheduleData" />
+                                    <f:selectItem itemLabel="Select Operator" itemValue="" noSelectionOption="true" />
+                                    <f:selectItems value="#{tOperatorScheduleViewEditManagedBean.operators}" var="operator" itemLabel="ID:#{operator.operatorId} Name:#{operator.operatorName}"  itemValue="#{operator.operatorId}"/>
+                                </p:selectOneMenu>
+                            </p:column>
+                        </p:row>
+
+
+                        <p:dataTable id="scheduleData" var="oschedule" sortMode="multiple" editable="true" value="#{tOperatorScheduleViewEditManagedBean.oschedules}" 
+                                 widgetVar="scheduleTable"
+                                 emptyMessage="No schedule found"
+                                 rowKey="#{oschedule.operatorScheduleId}">
+
+                        <f:facet name="header">                    
+                            <p:outputPanel>
+                                <h:outputText value="Search Schedule fields:" />
+                                <p:inputText id="globalFilter" onkeyup="PF('scheduleData').filter()" />
+                            </p:outputPanel>
+                        </f:facet>
+
+                        <p:ajax event="rowEdit" listener="#{tOperatorScheduleViewEditManagedBean.onRowEdit}"/>
+                        <p:ajax event="rowEditCancel" listener="#{tOperatorScheduleViewEditManagedBean.onRowCancel}"/>                
+
+                        <p:column filterBy="#{oschedule.operatorScheduleId}" filterMatchMode="exact" headerText="Schedule ID" >
+                            <h:outputText value="#{oschedule.operatorScheduleId}" />
+                        </p:column>
+
+                        <p:column  headerText="startDate" filterBy="#{oschedule.startDate}" filterMatchMode="contains">
+                            <p:cellEditor>
+                                <f:facet name="output"><h:outputText value="#{oschedule.startDate}" /></f:facet>
+                                <f:facet name="input"><p:inputText value="#{oschedule.startDate}" style="width:100%" label="Start Date"/></f:facet>
+                            </p:cellEditor>
+                        </p:column>
+
+                        <p:column  headerText="endDate" filterBy="#{oschedule.endDate}" filterMatchMode="contains">
+                            <p:cellEditor>
+                                <f:facet name="output"><h:outputText value="#{oschedule.endDate}" /></f:facet>
+                                <f:facet name="input"><p:inputText value="#{oschedule.endDate}" style="width:100%" label="End Date"/></f:facet>
+                            </p:cellEditor>
+                        </p:column>
+
+
+
+                        <p:column headerText = "Delete Schedule">
+                            <p:commandButton action="#{tOperatorScheduleViewEditManagedBean.deleteAssetSchedule(oschedule)}" update="scheduleData" value="Delete"  >
+                                <p:confirm header="Confirm Deletion" message="Are you sure that you want to delete this schedule?" icon="ui-icon-alert" />
+                            </p:commandButton> 
+                            <p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
+                                <p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+                                <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+                            </p:confirmDialog>
+                        </p:column>
+
+                        <p:column style="width:32px">
+                            <p:rowEditor />
+                        </p:column>
+
+                    </p:dataTable>
+                    <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
+                </p:panel>
+ 
+            </h:form>
+        </ui:define>
+    </ui:composition>
+</html>                        
+
+
